--- a/Apps/angular.json
+++ b/Apps/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angularApp": {
+    "Apps": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angularApp",
+            "outputPath": "dist/Apps",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +23,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -58,18 +57,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angularApp:build"
+            "browserTarget": "Apps:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angularApp:build:production"
+              "browserTarget": "Apps:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angularApp:build"
+            "browserTarget": "Apps:build"
           }
         },
         "test": {
@@ -80,7 +79,6 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -104,7 +102,7 @@
         }
       }
     },
-    "angularApp-e2e": {
+    "Apps-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -113,11 +111,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angularApp:serve"
+            "devServerTarget": "Apps:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angularApp:serve:production"
+              "devServerTarget": "Apps:serve:production"
             }
           }
         },
@@ -133,5 +131,5 @@
       }
     }
   },
-  "defaultProject": "angularApp"
+  "defaultProject": "Apps"
 }
